fix: Main dashboard section not centered

--- a/src/app/(app)/AppLayout.module.css
+++ b/src/app/(app)/AppLayout.module.css
@@ -7,6 +7,7 @@
 .content {
   flex: 1;
   max-width: 76rem;
-  justify-content: center;
+  margin: auto;
+  width: 100%;
   padding: 0 6.25rem;
 }
